--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Navbar {
+    height: 100px;
+    width: 100%;
+    color: white;
+    background: #0027ff;
+    display: flex;
+    align-items: center;
+}
+
+.Logo {
+    font-size: 25px;
+    margin-left: 40px;
+}
+
+.JokesList {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+
+}
+
+.JokesList li {
+    width: 30%;
+    color: white;
+    background: #0027ff;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    padding: 20px;
+    transition: .3s;
+}
+
+.JokesList li:hover{
+    transform: scale(1.3);
+}
+
+.Navbar_Control{
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+}
+
+.Navbar_Control li a{
+    text-decoration: none;
+    color: white;
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 6px;
+    transition: .3s;
+}
+.Navbar_Control li a:hover{
+    background: white;
+    color: #0027ff;
+}
+
+
+
